Fix Swagger schema for TestFastController response
